# OpenAgenet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
agents/: README.md
agents/agent-contract/: openapi.yaml
agents/service-agent-python/: README.md  config.example.toml  pyproject.toml
agents/service-agent-python/docs/: design.md
agents/service-agent-python/src/service_agent/: __init__.py  main.py
agents/service-agent-python/src/service_agent/tasks/: __init__.py
agents/user-agent-python/: README.md  config.example.toml  pyproject.toml
agents/user-agent-python/docs/: design.md
agents/user-agent-python/src/user_agent/: __init__.py  main.py
apps/: README.md
apps/openagentctl/: README.md
apps/playground/: README.md
apps/web-console/: README.md
configs/: README.md  local.example.toml
crates/: README.md
crates/oan-bulletin/: README.md
crates/oan-bulletin/src/: lib.rs
crates/oan-client/: README.md
crates/oan-client/src/: lib.rs
crates/oan-core/: README.md
crates/oan-core/src/: lib.rs
crates/oan-credentials/: README.md
crates/oan-credentials/src/: lib.rs
crates/oan-crypto/: README.md
crates/oan-crypto/src/: lib.rs
crates/oan-did-ans/: README.md
crates/oan-did-ans/src/: lib.rs
crates/oan-package/src/: lib.rs
crates/oan-protocol/: README.md
crates/oan-protocol/src/: lib.rs
crates/oan-storage/: README.md
crates/oan-storage/src/: lib.rs
data/: DEV_KEYS_NOTICE.md  README.md  dev-identities.json
data/cdn/: manifest.json
data/cdn/documents/: did_ans_AGDM_ef7Qse3ynni4MnLQHXvaHUS8Ac3RJqGWRFRwfiBsWW6SxV.json  did_ans_AGDM_efEfrwc7SRoM4Xc8jhymaA9dMnukgh5o9Th8RKEDvX6zKA.json  did_ans_AGDM_efGyxDoPcm8SgEkFbHfyXSX1PTaKWfDH1Ltw2piFebYLgj.json  did_ans_AGDS_efAAwpkMEA3HESX6cuAkGA5CEWWbZttBZFVHxoWYkWqncC.json  did_ans_AGRT_ef6acvLB7aJ2WZVGmzb5hy4hwpuNbyh2e1yjWugrQLyEAm.json  did_ans_AGRT_ef8mwSoLkuczZefef3cJpUqE7Xqg7WWakUYNXtS7R9CpEm.json  did_ans_AGUS_ef5e6f7BFrqykuss9LSTh4c65eX6y2q4diEF7HnYSfsmGb.json  did_ans_AGUS_efDYS9e8DqpirBGYJNg5BkFwq1hP9QJRwAn7G1P5By5b5F.json
data/cdn/metadata/: did_ans_AGDM_ef7Qse3ynni4MnLQHXvaHUS8Ac3RJqGWRFRwfiBsWW6SxV.json  did_ans_AGDM_efEfrwc7SRoM4Xc8jhymaA9dMnukgh5o9Th8RKEDvX6zKA.json  did_ans_AGDM_efGyxDoPcm8SgEkFbHfyXSX1PTaKWfDH1Ltw2piFebYLgj.json  (+12 more)
data/demo-service-agent/: did-document.json
data/discovery/: did-document.json
data/registrar/: did-document.json
data/root/: bulletin.json  did-document.json
data/user-agent/: did-document.json
deployments/: README.md
deployments/compose/: README.md
deployments/docker/: README.md
docs/: ANS Protocol Specification.md  GBT4754-2017_industry_tree.json  TODO.md  baseline-comparison-improvement-guide.md  baseline-comparison-shortcoming-response.md  business-model.md  design.md  ecosystem-participation-guide.md  ecosystem-strategy-analysis.md  error-codes.md  large-scale-production-ecosystem-guide.md  openagenet-future-development-strategy.md  openagentnet-future-development-strategy.md  paper-experiment-reproduction-guide-based-on-current-oan.md  repository-and-control-strategy-guide.md  sdk-support-guide.md  国民经济行业分类和代码.docx  智能体标识方案.pptx
docs/brands/: README.md  slogan.json
docs/research/: experiment-environment-rebuild-guide.md
docs/research/redo-experiments/system-ablation/oan-reference-services/: .env.example  Cargo.toml  README.md
docs/research/redo-experiments/system-ablation/oan-reference-services/crates/oan-service-security/src/: lib.rs
docs/research/redo-experiments/system-ablation/oan-reference-services/scripts/: README.md  generate-dev-identities.mjs
docs/research/redo-experiments/system-ablation/oan-reference-services/services/cdn-node/: Cargo.toml  README.md  config.example.toml
docs/research/redo-experiments/system-ablation/oan-reference-services/services/cdn-node/src/: main.rs
docs/research/redo-experiments/system-ablation/oan-reference-services/services/discovery-node/: Cargo.toml  README.md  config.example.toml
docs/research/redo-experiments/system-ablation/oan-reference-services/services/discovery-node/src/: main.rs
docs/research/redo-experiments/system-ablation/oan-reference-services/services/registrar-node/: Cargo.toml  README.md  config.example.toml
docs/research/redo-experiments/system-ablation/oan-reference-services/services/registrar-node/src/: main.rs
docs/research/redo-experiments/system-ablation/oan-reference-services/services/root-node/: Cargo.toml  README.md  config.example.toml
docs/research/redo-experiments/system-ablation/oan-reference-services/services/root-node/src/: main.rs
examples/: README.md
examples/a2a-service-agent-demo/: README.md
examples/discover-agent/: README.md
examples/full-trusted-invocation/: README.md
examples/mcp-service-agent-demo/: README.md
examples/multi-registrar-discovery/: README.md  run.ps1
examples/register-service-agent/: README.md
examples/research-evaluation/: common.ps1  debug-root-authorize.ps1  run-all.ps1  run-auth-discovery.ps1  run-negative.ps1
examples/trusted-invocation-negative-cases/: README.md  run.ps1
scripts/: convert-capability-tree.mjs  generate-dev-identities.mjs  generate-multi-node-demo.mjs  run-e2e-demo.ps1
services/: README.md
services/cdn-node/: Cargo.toml  README.md  config.example.toml
services/cdn-node/docs/: design.md
services/cdn-node/src/: main.rs
services/discovery-node/: Cargo.toml  README.md  config.example.toml
services/discovery-node/docs/: design.md
services/discovery-node/src/: main.rs
services/registrar-node/: Cargo.toml  README.md  config.example.toml
services/registrar-node/docs/: design.md
services/registrar-node/src/: main.rs
services/root-node/: Cargo.toml  README.md  config.example.toml
services/root-node/docs/: design.md
services/root-node/src/: main.rs
tests/: README.md
upgrade-sync-package/: CHANGELOG-FOR-UPGRADE.md  README.md
upgrade-sync-package/docs/: scalability-bottleneck-analysis.md
upgrade-sync-package/research-evaluation/: README.md  debug-discovery-sync.ps1  generate-dataset.mjs  run-lifecycle.ps1  run-scalability.ps1
(+72 files in other folders)
