[project]
name = "openagentnet-service-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
]

[project.scripts]
openagentnet-service-agent = "service_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/service_agent"]
