[project]
name = "oan-user-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
]

[project.scripts]
oan-user-agent = "user_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/user_agent"]
