[package]
name = "cdn-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
oan-core = { path = "../../crates/oan-core" }
oan-package = { path = "../../crates/oan-package" }
oan-storage = { path = "../../crates/oan-storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
