[package]
name = "root-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
oan-bulletin = { path = "../../crates/oan-bulletin" }
oan-core = { path = "../../crates/oan-core" }
oan-credentials = { path = "../../crates/oan-credentials" }
oan-crypto = { path = "../../crates/oan-crypto" }
oan-did-ans = { path = "../../crates/oan-did-ans" }
oan-package = { path = "../../crates/oan-package" }
oan-protocol = { path = "../../crates/oan-protocol" }
oan-storage = { path = "../../crates/oan-storage" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
