[workspace]
members = [
    "crates/oan-service-security",
    "services/root-node",
    "services/registrar-node",
    "services/discovery-node",
    "services/cdn-node",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenAgenet/oan-reference-services"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
url = "2"
thiserror = "2"

oan-bulletin = { path = "../oan-protocol-common/crates/oan-bulletin" }
oan-core = { path = "../oan-protocol-common/crates/oan-core" }
oan-credentials = { path = "../oan-protocol-common/crates/oan-credentials" }
oan-crypto = { path = "../oan-protocol-common/crates/oan-crypto" }
oan-did-ans = { path = "../oan-protocol-common/crates/oan-did-ans" }
oan-package = { path = "../oan-protocol-common/crates/oan-package" }
oan-protocol = { path = "../oan-protocol-common/crates/oan-protocol" }
oan-storage = { path = "../oan-protocol-common/crates/oan-storage" }
oan-service-security = { path = "crates/oan-service-security" }
