[package]
name = "cdn-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
oan-core.workspace = true
oan-package.workspace = true
oan-protocol.workspace = true
oan-service-security.workspace = true
oan-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
oan-crypto.workspace = true

[dev-dependencies]
tempfile.workspace = true
ed25519-dalek.workspace = true

