[package]
name = "discovery-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
oan-bulletin.workspace = true
oan-core.workspace = true
oan-crypto.workspace = true
oan-package.workspace = true
oan-protocol.workspace = true
oan-storage.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile.workspace = true

